# azure-agentic-ml

./: README.md
azure-agentic-ml-agent/: pyproject.toml  requirements.txt  setup.ps1  setup.sh
azure-agentic-ml-agent/.chainlit/: config.toml
azure-agentic-ml-agent/azure_agentic_ml_agent/: config.py  main.py
azure-agentic-ml-agent/public/: theme.json
azure-agentic-ml-mcp/: pyproject.toml  requirements.txt  setup.ps1  setup.sh
azure-agentic-ml-mcp/azure_agentic_ml_mcp/: config.py  main.py  tools.py
azure-agentic-ml-mcp/containers/model-server/: Dockerfile  model_server.py
azure-agentic-ml-mcp/containers/model-trainer/: Dockerfile
